--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       width: 80%;
       display: grid;
       grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
-      border: 5px solid blue;
+      border: 5px solid #3B5000;
       justify-content: center;
     }
 
     .grid>div {
       width: 100%;
       height: 200px;
-      background: #e84393;
+      background: #84A136;
       color: white;
       border: 1px solid white;
       display: flex;
@@ -37,12 +37,12 @@
 
 <body>
   <div class="container grid">
-     <div class="item1"><img src="http://www.abcgallery.com/I/icons/icon44.JPG" alt="Smiley face" height="150" width="150"></div>
-    <div>Box 2</div>
-    <div>Box 3</div>
-    <div>Box 4</div>
-    <div>Box 5</div>
-    <div>Box 6</div>
+     <div class="item1"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/001.png?raw=true" alt="Smiley face" height="150" width="150"></div>
+    <div class="item2"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/003.png?raw=true" alt="Smiley face" height="150" width="150"></div>
+    <div class="item3"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/005.png?raw=true" alt="Smiley face" height="150" width="150"></div>
+    <div class="item4"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/004.png?raw=true" alt="Smiley face" height="150" width="150"></div>
+    <div class="item5"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/002.png?raw=true" alt="Smiley face" height="150" width="150"></div>
+    <div class="item6"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/006.png?raw=true" alt="Smiley face" height="150" width="150"></div>
   </div>
 </body>
 
