--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
+  
+  <h1>CSS font-family</h1>
+  
+  
   <style>
     * {
       padding: 0;
@@ -12,6 +17,7 @@
       display: flex;
       justify-content: center;
       padding-top: 50px;
+      text-align: center;
     }
     .grid {
       width: 80%;
@@ -36,7 +42,8 @@
 </head>
 
 <body>
-  <div class="container grid">
+
+ <div class="container grid">
      
      <div class="item1"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/001.png?raw=true" alt="Smiley face" height="150" width="150"></div>
    
