--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   
   <div class="item1" id="B1">
   
-  <img src="https://github.com/agm86b/w8_mid-term/blob/master/image/001.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img01" src="https://github.com/agm86b/w8_mid-term/blob/master/image/001.png?raw=true" alt="Smiley face" height="250" width="250">
   <center><button type="button" onclick="changeB1red()">Gotcha!</button></center>
   
   </div>
   
   <div class="item2" id="B2">
-  <img src="https://github.com/agm86b/w8_mid-term/blob/master/image/003.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img02" src="https://github.com/agm86b/w8_mid-term/blob/master/image/003.png?raw=true" alt="Smiley face" height="250" width="250">
   
   <center><button type="button" onclick="changeB2blue()">Gotcha!</button></center>
   
@@ -46,20 +46,22 @@
 
   <div class="item3" id="B3">
   
-  <img src="https://github.com/agm86b/w8_mid-term/blob/master/image/005.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img03" src="https://github.com/agm86b/w8_mid-term/blob/master/image/005.png?raw=true" alt="Smiley face" height="250" width="250">
   
   <center><button type="button" onclick="changeB3red()">Gotcha!</button></center>
   
   
  </div>
   
-  <div class="item4" id="B4"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/004.png?raw=true" alt="Smiley face" height="250" width="250">
+  <div class="item4" id="B4">
+  <img id="img04" src="https://github.com/agm86b/w8_mid-term/blob/master/image/004.png?raw=true" alt="Smiley face" height="250" width="250">
   
     <center><button type="button" onclick="changeB4blue()">Gotcha!</button></center>
   
   </div>
      
-  <div class="item5" id="B5"><img src="https://github.com/agm86b/w8_mid-term/blob/master/image/002.png?raw=true" alt="Smiley face" height="250" width="250">
+  <div class="item5" id="B5">
+  <img id="img05" src="https://github.com/agm86b/w8_mid-term/blob/master/image/002.png?raw=true" alt="Smiley face" height="250" width="250">
   
   <center><button type="button" onclick="changeB5red()">Gotcha!</button></center>
   
@@ -67,7 +69,7 @@
   
   <div class="item6" id="B6">
   
-  <img src="https://github.com/agm86b/w8_mid-term/blob/master/image/006.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img06" src="https://github.com/agm86b/w8_mid-term/blob/master/image/006.png?raw=true" alt="Smiley face" height="250" width="250">
   
   <center><button type="button" onclick="changeB6blue()">Gotcha!</button></center>
   
@@ -102,7 +104,6 @@ var BGelement= document.getElementById("B3");
 BGelement.style.backgroundColor="red";
 clickedButton();
 }  
-
 function changeB4blue()
 {
 var BGelement= document.getElementById("B4");
