--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 {
 var BGelement= document.getElementById("B1");
 BGelement.style.backgroundColor="red";
+var imgelement= document.getElementById("img01");
+imgelement.src=image1;
 clickedButton();
 }
  
@@ -95,6 +97,8 @@ clickedButton();
 {
 var BGelement= document.getElementById("B2");
 BGelement.style.backgroundColor="blue";
+var imgelement= document.getElementById("img02");
+imgelement.src=image1;
 clickedButton();
 }
   
@@ -102,12 +106,16 @@ clickedButton();
 {
 var BGelement= document.getElementById("B3");
 BGelement.style.backgroundColor="red";
+var imgelement= document.getElementById("img03");
+imgelement.src=image1;
 clickedButton();
 }  
 function changeB4blue()
 {
 var BGelement= document.getElementById("B4");
 BGelement.style.backgroundColor="blue";
+var imgelement= document.getElementById("img04");
+imgelement.src=image1;
 clickedButton();
 }
   
@@ -115,6 +123,8 @@ clickedButton();
 {
 var BGelement= document.getElementById("B5");
 BGelement.style.backgroundColor="red";
+var imgelement= document.getElementById("img05");
+imgelement.src=image1;
 clickedButton();
 }  
   
@@ -122,8 +132,13 @@ function changeB6blue()
 {
 var BGelement= document.getElementById("B6");
 BGelement.style.backgroundColor="blue";
+var imgelement= document.getElementById("img06");
+imgelement.src=image1;
 clickedButton();
 }  
+
+var image1="https://github.com/agm86b/w8_mid-term/blob/master/image/008.png?raw=true";
+
   
 </script>
 
