--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
  </div>
   
   <div class="item4" id="B4">
-  <img id="img04" src="https://github.com/agm86b/w8_mid-term/blob/master/image/004.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img04" src="https://github.com/agm86b/w8_mid-term/blob/master/image/006.png?raw=true" alt="Smiley face" height="250" width="250">
   
     <center><button type="button" onclick="changeB4blue()">Gotcha!</button></center>
   
   </div>
      
   <div class="item5" id="B5">
-  <img id="img05" src="https://github.com/agm86b/w8_mid-term/blob/master/image/002.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img05" src="https://github.com/agm86b/w8_mid-term/blob/master/image/007.png?raw=true" alt="Smiley face" height="250" width="250">
   
-  <center><button type="button" onclick="changeB5red()">Gotcha!</button></center>
+  <center><button type="button" onclick="changeB5red()">？？？</button></center>
   
   </div>
   
   <div class="item6" id="B6">
   
-  <img id="img06" src="https://github.com/agm86b/w8_mid-term/blob/master/image/006.png?raw=true" alt="Smiley face" height="250" width="250">
+  <img id="img06" src="https://github.com/agm86b/w8_mid-term/blob/master/image/002.png?raw=true
+  " alt="Smiley face" height="250" width="250">
   
   <center><button type="button" onclick="changeB6blue()">Gotcha!</button></center>
   
@@ -115,7 +116,6 @@ function changeB4blue()
 var BGelement= document.getElementById("B4");
 BGelement.style.backgroundColor="blue";
 var imgelement= document.getElementById("img04");
-imgelement.src=image1;
 clickedButton();
 }
   
@@ -124,7 +124,8 @@ clickedButton();
 var BGelement= document.getElementById("B5");
 BGelement.style.backgroundColor="red";
 var imgelement= document.getElementById("img05");
-imgelement.src=image1;
+imgelement.src=image2;
+alert("Oops！");
 clickedButton();
 }  
   
@@ -138,6 +139,10 @@ clickedButton();
 }  
 
 var image1="https://github.com/agm86b/w8_mid-term/blob/master/image/008.png?raw=true";
+
+var image2="https://github.com/agm86b/w8_mid-term/blob/master/image/004.png?raw=true";
+
+
 
   
 </script>
