--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ function changeB4blue()
 var BGelement= document.getElementById("B4");
 BGelement.style.backgroundColor="blue";
 var imgelement= document.getElementById("img04");
+imgelement.src=image1;
 clickedButton();
 }
   
